--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch-A-Sketch</title>
     <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.cdnfonts.com/css/sportsball" rel="stylesheet" />
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="header">This is my header</div>
+    <div class="header">
+      <h1>Etch-A-Sketch</h1>
+      <h3>Refresh the page to start again!</h3>
+    </div>
     <div class="game">
       <div id="container" class="container"></div>
     </div>
